# png2mozjpegd

./: CREDITS  Cargo.toml  LICENSE  README.md  config.vrchat.yml  config.yml  image-compress-daemon.wrap.bat  renovate.json
.github/workflows/: actionlint.yml  release.yml  review.yml
src/: main.rs  parse_thread_count.rs
src/model/: mod.rs  parse_pathbuf.rs
