[package]
name = "png2mozjpegd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.7", default-features = false, features = [ "png" ] }
mozjpeg = "0.10.5"
notify = "6.1.1"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "time", "macros"] , default-features = false}
serde = { version = "1.0.190" , features = ["derive"] }
serde_yaml = "0.9.25"
once_cell = "1.18.0"
walkdir = "2.4.0"
dirs = "5.0.1"
num_cpus = "1.16.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
