[package]
name = "png2mozjpegd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.8", default-features = false, features = [ "png" ] }
mozjpeg = "0.10.6"
notify = "6.1.1"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "time", "macros"] , default-features = false}
serde = { version = "1.0.196" , features = ["derive"] }
serde_yaml = "0.9.30"
once_cell = "1.19.0"
walkdir = "2.4.0"
dirs = "5.0.1"
num_cpus = "1.16.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
