[package]
name = "png2mozjpegd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.25.1", default-features = false, features = [ "png" ] }
mozjpeg = "0.10.7"
notify = "8.0.0"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "time", "macros"] , default-features = false}
serde = { version = "1.0.200" , features = ["derive"] }
serde_yaml = "0.9.34"
once_cell = "1.19.0"
walkdir = "2.5.0"
dirs = "6.0.0"
num_cpus = "1.16.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
